--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.formento.cadastro</groupId>
     <artifactId>cadastro-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>cadastro</name>
     <description>Sistema de cadastro (API)</description>
