--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ jwt:
   header: Authorization
   scheme: Bearer
   secret: Senha
-  expiration: 1800 #segundos -> 30 minutos
-#  expiration: 10 #segundos
+#  expiration: 1800 #segundos -> 30 minutos
+  expiration: 10 #segundos
   route:
     authentication:
       path: auth
