--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <java.version>1.8</java.version>
         <springfox-swagger.version>2.4.0</springfox-swagger.version>
         <jjwt.version>0.4</jjwt.version>
+        <fixture-factory.version>3.1.0</fixture-factory.version>
     </properties>
 
     <dependencies>
@@ -63,6 +64,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>br.com.six2six</groupId>
+            <artifactId>fixture-factory</artifactId>
+            <version>${fixture-factory.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- spring-security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -82,13 +90,6 @@
             <artifactId>jjwt</artifactId>
             <version>${jjwt.version}</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.security.oauth</groupId>-->
-            <!--<artifactId>spring-security-oauth2</artifactId>-->
-        <!--</dependency>-->
-
-
 
         <!-- SWAGGER -->
         <dependency>
